appId: com.ahror2937.sarflog
---
- launchApp:
    clearState: true
- tapOn: { point: "83%,60%" }
- tapOn: { point: "50%,45%" }
- inputText: "e2e_signup@test.com"
- tapOn: { point: "50%,60%" }
